Prevent HTML overflow scrolling into whitespace

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,6 +11,14 @@ body,
   line-height: 25px;
   letter-spacing: 0.8px;
 }
+html {
+  overflow: hidden;
+  height: 100%;
+}
+body {
+  overflow: auto;
+  height: 100%;
+}
 h1 {
   font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text,
     Times New Roman, serif !important;
